# shortcuts

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  Brewfile  Justfile  Taskfile.yml  aggrandizement-examples.txt  aggrandizement-types.txt  devbox.json  pyproject.toml  sgconfig.yml
lib/: export  tree-sitter-jsonnet.dylib
lib/ast-grep/: sg-rules.yaml
lib/ast-grep-rules/: uuids.yaml
lib/jsonnet/: _shortcuts_keys.libsonnet  shortcuts.libsonnet  stdlib.libsonnet
lib/python/: jsonnet_methods.py  jsonnet_render.py  (+1 more)
scripts/: export  import
shortcuts/: Update Alarms from Calendar Events.cue  Update Alarms from Calendar Events.jsonnet
src/: Add Leftovers to the List.jsonnet  Add New Reminder from Dictionary.jsonnet  Bedtime Prompt If Unlocked.jsonnet  Call GitHub API.jsonnet  Call YNAB API.jsonnet  Cleanup duplicate or similar images.jsonnet  Convert Github URL to Path.jsonnet  Copy Contact Emails.jsonnet  Create a Reminders List.jsonnet  Done With Top Focus.jsonnet  Get Email Message ID Link.jsonnet  Get Obsidian Vault Path.jsonnet  Get Other Mac Address.jsonnet  Hourly Automations.jsonnet  Jira - GTD Review.jsonnet  New Shortcut.jsonnet  Optimized multi-stop navigation.jsonnet  Random Port.jsonnet  Set Countdown Alarms.jsonnet  Set Countdown Timer with Warning Alarms.jsonnet  Switch Apple Keyboard & Mouse.jsonnet  Turn Off All Alarms.jsonnet  Update Alarms from Calendar Events 1.jsonnet  Update Alarms from Calendar Events.jsonnet  Update Obsidian hidden files by _current_focus.jsonnet  Val Examples.jsonnet  Voice Journal.jsonnet
(+217 files in other folders)
