[tool.poetry]
name = "shortcuts"
description = "Source code for my personal collection of Apple/iOS Shortcuts"
authors = ["Tim Vergenz <vergenzt@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
jsonnet = "^0.20.0"
jsonpatch = "^1.33"
json-pointer = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
