[tool.poetry]
name = "shortcuts"
version = "0.1.0"
authors = ["Tim Vergenz <vergenzt@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
jsonnet = "^0.20.0"
jsonpatch = "^1.33"
json-pointer = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
